--- a/circle.yml
+++ b/circle.yml
@@ -7,9 +7,9 @@ dependencies:
     - gem install bundler --pre 
     - wget http://download.redis.io/releases/redis-3.2.0.tar.gz
     - tar xzf redis-3.2.0.tar.gz
-    - cd redis-3.2.0 && make
+    - cd redis-3.2.0 && make test
   cache_directories:
     - redis-3.2.0
 test:
   pre:
-    - sudo service redis-server --port 6391 start
+    - sudo service redis-server start --port 6391
